# testElastio

./: .gitignore  Cargo.toml  README.md  TASK.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml
src/: alvares_weather_provider.rs  app_exit_code.rs  command.rs  configure_command_executor.rs  configure_executor.rs  execution_result.rs  get_command_executor.rs  get_executor.rs  gismeteo_weather_provider.rs  interfaces.rs  lib.rs  main.rs  openweathermap_weather_provider.rs  request.rs  settings.rs  view_command_executor.rs  weather_provider.rs  weather_provider_factory.rs  weatherapi_weather_provider.rs
src/command/: configure_command_executor.rs  get_command_executor.rs  view_command_executor.rs
src/interfaces/: command_interface.rs  executor_chain_interface.rs  provider_settings_interface.rs  settings_interface.rs  weather_provider_factory_interface.rs  weather_provider_strategy_interface.rs
src/test_elastio/: alvares_weather_provider.rs.html  app_exit_code.rs.html  command.rs.html  configure_command_executor.rs.html  execution_result.rs.html  get_command_executor.rs.html  gismeteo_weather_provider.rs.html  interfaces.rs.html  lib.rs.html  openweathermap_weather_provider.rs.html  request.rs.html  settings.rs.html  view_command_executor.rs.html  weather_provider.rs.html  weather_provider_factory.rs.html  weatherapi_weather_provider.rs.html
src/weather_provider/: provider_settings.rs  (+2 more)
test_elastio/: all.html  index.html  sidebar-items.js
tests/: invoke_program.rs
(+115 files in other folders)
