[package]
name = "test_elastio"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[registries.crates-io]
protocol = "sparse"

[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
assert_cmd = "2.0.11"
chrono = "0.4.24"
dotenvs = "0.1.0"
log = "0.4.17"
logtest = "2.0.0"
openweathermap = "0.2.4"
serial_test = "2.0.0"
weer_api = "0.1.1"
