[package]
name = "test_elastio"
version = "0.3.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
assert_cmd = "2"
chrono = "0"
dotenvs = "0"
log = "0"
logtest = "2"
openweathermap = "0"
serial_test = "2"
weer_api = "0"
